# esp32-4diac-example-application

./: .gitlab-ci.yml  README.md  make_esp32.sh  make_esp32c3.sh  make_esp32s2.sh  make_esp32s3.sh  sonar-project.properties
Application/: .cproject  .project  CMakeLists.txt  heaptrace-gdbinit  sdkconfig
Application/bootloader_components/my_boot_hooks/: hooks.c
Application/components/button/: Kconfig
Application/components/file_server/: CMakeLists.txt  file_server.c  file_server_main.c  upload_script.html
Application/main/: main.c
TestButton/: .cproject  .project  sdkconfig
TestButton/main/: CMakeLists.txt  test_button_main.c
TestEspHome/: .cproject  .project
TestEspHome/components/captive_portal/: captive_index.h
TestEspHome/components/core/: CMakeLists.txt  application.cpp  application.h  automation.h  base_automation.h  component.cpp  component.h  component_iterator.h  controller.h  datatypes.h  defines.h  helpers.cpp  helpers.h  log.cpp  log.h  preferences.h  scheduler.cpp  scheduler.h  version.h
TestEspHome/components/esp32_core/: CMakeLists.txt  core.cpp  gpio_arduino.h  gpio_idf.h  preferences.cpp
TestEspHome/components/improv_serial/: improv_serial_component.cpp  improv_serial_component.h
TestEspHome/components/logger/: CMakeLists.txt  logger.cpp  logger.h
TestEspHome/components/network/: CMakeLists.txt  util.cpp
TestEspHome/components/wifi/: CMakeLists.txt  wifi_component.cpp  wifi_component.h  (+1 more)
TestEspHome/main/: main.cpp
TestLEDStrip/: .cproject  .project  sdkconfig
TestLEDStrip/main/: CMakeLists.txt  test_led_strip_main.c
(+5 files in other folders)
